fix alignment and spacing on service page;

--- a/firstfive/static/css/services.css
+++ b/firstfive/static/css/services.css
@@ -1,5 +1,4 @@
 #player-services {
-    text-align: center;
 }
 
 .service-title {
